data/derived/comb/progs/unify/prog8090.ml.out
Characters 75-77:
  |Sine(e) -> sin(pi*eval e)
                  ^^
Error: This expression has type float but an expression was expected of type
         int
